--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: Poppins, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+  width: 567px;
+  height: 850px;
+  margin: 0 auto;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+.cards {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar {
+  height: 70px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+.logo {
+  padding: 20px;
+}
+.hero-contents {
+  padding: 0 30px;
+}
+.hero-container {
+  width: 400px;
+  padding-top: 20px;
+  margin: 0 auto;
+}
+
+.hero-header {
+  font-size: 36px;
+  line-height: 39px;
+  font-weight: 600;
+  padding-top: 32px;
+}
+
+.hero-text {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 300px;
+  padding-top: 16px;
+  width: 320px;
+  height: 56px;
+}
+
+.card-container {
+  padding: 40px 0 40px 30px;
+}
+.card-info {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  gap: 5px;
+}
+
+.rating {
+  font-size: 12px;
+  color: rgba(34, 34, 34, 1);
+  line-height: 13.2px;
+  font-weight: 300;
+}
+.rating-2 {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 13.2px;
+  color: rgba(145, 142, 155, 1);
+}
+.ellipse {
+  padding: 2.5px 1px;
+}
+.country {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 13.2px;
+  color: rgba(145, 142, 155, 1);
+}
+.tagline {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 13.2px;
+  color: rgba(34, 34, 34, 1);
+  padding: 5px 0;
+  overflow: hidden;
+}
+.price {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 13.2px;
+  color: rgba(34, 34, 34, 1);
+}
+.badge {
+  position: absolute;
+  margin: 7px;
+  padding: 5px;
+  width: 61px;
+  height: 20px;
+  background-color: #fff;
+  font-size: 10px;
+  line-height: 11px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 2px;
 }
